--- a/2_tensor_program_abstraction.html
+++ b/2_tensor_program_abstraction.html
@@ -247,7 +247,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/daobook/mlcbook/main?urlpath=lab/tree/doc/2_tensor_program_abstraction.ipynb"
+        <a href="https://mybinder.org/v2/gh/daobook/mlcbook/xin?urlpath=lab/tree/doc/2_tensor_program_abstraction.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -265,7 +265,7 @@ title="Launch on Binder"
       </li>
       
       <li>
-        <a href="https://colab.research.google.com/github/daobook/mlcbook/blob/main/doc/2_tensor_program_abstraction.ipynb"
+        <a href="https://colab.research.google.com/github/daobook/mlcbook/blob/xin/doc/2_tensor_program_abstraction.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -360,7 +360,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/daobook/mlcbook/edit/main/doc/2_tensor_program_abstraction.ipynb"
+        <a href="https://github.com/daobook/mlcbook/edit/xin/doc/2_tensor_program_abstraction.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -1038,7 +1038,7 @@ after transformation: 0.391784
         requestKernel: true,
         binderOptions: {
             repo: "daobook/mlcbook",
-            ref: "main",
+            ref: "xin",
         },
         codeMirrorConfig: {
             theme: "abcdef",
