--- a/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.html
+++ b/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.html
@@ -248,7 +248,7 @@ title="Toggle navigation"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="https://mybinder.org/v2/gh/daobook/mlcbook/main?urlpath=lab/tree/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
+        <a href="https://mybinder.org/v2/gh/daobook/mlcbook/xin?urlpath=lab/tree/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -266,7 +266,7 @@ title="Launch on Binder"
       </li>
       
       <li>
-        <a href="https://colab.research.google.com/github/daobook/mlcbook/blob/main/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
+        <a href="https://colab.research.google.com/github/daobook/mlcbook/blob/xin/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -361,7 +361,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/daobook/mlcbook/edit/main/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
+        <a href="https://github.com/daobook/mlcbook/edit/xin/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -2242,7 +2242,7 @@ And the fcompute function describes how we want to compute the value of each ele
         requestKernel: true,
         binderOptions: {
             repo: "daobook/mlcbook",
-            ref: "main",
+            ref: "xin",
         },
         codeMirrorConfig: {
             theme: "abcdef",
