--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/daobook/mlcbook/edit/main/doc/index.md"
+        <a href="https://github.com/daobook/mlcbook/edit/xin/doc/index.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -461,7 +461,7 @@ title="Print to PDF"
         requestKernel: true,
         binderOptions: {
             repo: "daobook/mlcbook",
-            ref: "main",
+            ref: "xin",
         },
         codeMirrorConfig: {
             theme: "abcdef",
